Page MenuHome GnuPG

Heuristic for default reader detection
Closed, ResolvedPublic

Description

In 2.2 we have only support for one reader. A common problem is that there are several readers installed and the first one is pciked, which is often not correct. In particular on Windows you find virtual readers and GSM cards which all show up as PC/SC reader.

We should thus sort the list of readers and pick the most suitable as default.

On 2.3 this is not required because we make use of all available readers.

Event Timeline

werner triaged this task as Normal priority.Oct 7 2021, 4:07 PM
werner created this task.
werner created this object with edit policy "Contributor (Project)".
werner raised the priority of this task from Normal to High.Oct 8 2021, 2:51 PM

Please tell me reader names to skip.

On my new Windows 10 laptop I see a "Windows Hello for Business 1". Thus put everything with "Windows Hello" at the end of the list or skip unless a reader-port is set. IIRC there are device with "virtual" or "Virtual" in their name, they don't make sense for us either. I would also put devices with "SCM" or "Identiv" to the top of the list. In particular the substrings "SPR532" seems to identify the Identiv SPR332 which is what we use here and actualay a suggested reader for GnUPG VS-Desktop.

I put my initial try by rG752422a792ce: scd: Select a reader for PC/SC..

I feel that use of white list is a bit strong.

gniibe added a project: Restricted Project.Nov 12 2021, 5:50 AM
werner changed the task status from Open to Testing.Nov 23 2021, 1:28 PM